--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "clear:lib": "rm -rf lib",
     "dist": "npm run clear:lib && rollup -c",
+    "storybook": "start-storybook",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,16 +26,25 @@
   },
   "homepage": "https://github.com/room-js/typescript-vue-component-boilerplate#readme",
   "devDependencies": {
+    "@babel/core": "7.5.4",
+    "@storybook/addon-info": "5.1.9",
+    "@storybook/vue": "5.1.9",
+    "@types/storybook__vue": "5.0.2",
     "@typescript-eslint/parser": "1.11.0",
     "@wessberg/rollup-plugin-ts": "1.1.59",
+    "awesome-typescript-loader": "5.2.1",
+    "babel-loader": "8.0.6",
+    "babel-preset-vue": "2.0.2",
     "eslint": "6.0.1",
     "eslint-plugin-vue-libs": "3.0.0",
+    "react-docgen-typescript-loader": "3.1.0",
     "rollup": "1.16.6",
     "rollup-plugin-commonjs": "10.0.1",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-vue": "5.0.1",
     "typescript": "3.5.2",
     "vue": "2.6.10",
+    "vue-loader": "15.7.0",
     "vue-template-compiler": "2.6.10"
   },
   "peerDependencies": {
