--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "clear:lib": "rm -rf lib",
     "dist": "npm run clear:lib && rollup -c",
+    "lint": "eslint --ext .js,.ts ./src",
     "storybook": "start-storybook",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,26 +27,36 @@
   },
   "homepage": "https://github.com/room-js/typescript-vue-component-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "7.5.4",
-    "@storybook/addon-info": "5.1.9",
-    "@storybook/vue": "5.1.9",
-    "@types/storybook__vue": "5.0.2",
-    "@typescript-eslint/parser": "1.11.0",
-    "@wessberg/rollup-plugin-ts": "1.1.59",
-    "awesome-typescript-loader": "5.2.1",
-    "babel-loader": "8.0.6",
-    "babel-preset-vue": "2.0.2",
-    "eslint": "6.0.1",
-    "eslint-plugin-vue-libs": "3.0.0",
-    "react-docgen-typescript-loader": "3.1.0",
-    "rollup": "1.16.6",
-    "rollup-plugin-commonjs": "10.0.1",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-vue": "5.0.1",
-    "typescript": "3.5.2",
-    "vue": "2.6.10",
-    "vue-loader": "15.7.0",
-    "vue-template-compiler": "2.6.10"
+    "@babel/core": "^7.5.4",
+    "@storybook/addon-info": "^5.1.9",
+    "@storybook/vue": "^5.1.9",
+    "@types/jest": "^24.0.15",
+    "@types/storybook__vue": "^5.0.2",
+    "@typescript-eslint/parser": "^1.12.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "@wessberg/rollup-plugin-ts": "^1.1.59",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^8.0.0-beta.6",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-vue": "^2.0.2",
+    "babel7-jest": "^1.0.1",
+    "eslint": "^6.0.1",
+    "html-loader": "^0.5.5",
+    "jest": "^24.8.0",
+    "jest-serializer-vue": "^2.0.2",
+    "react-docgen-typescript-loader": "^3.1.0",
+    "rollup": "^1.16.6",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-vue": "^5.0.1",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.2",
+    "vue": "^2.6.10",
+    "vue-jest": "^3.0.4",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "peerDependencies": {
     "vue": "^2.0.0"
