--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
     "react-docgen-typescript-loader": "^3.1.0",
+    "reflect-metadata": "^0.1.13",
     "rollup": "^1.16.6",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
