--- a/package.json
+++ b/package.json
@@ -42,16 +42,20 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
     "babel7-jest": "^1.0.1",
+    "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "html-loader": "^0.5.5",
     "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
+    "node-sass": "^4.12.0",
     "react-docgen-typescript-loader": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "rollup": "^1.16.6",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-vue": "^5.0.1",
+    "sass-loader": "^7.1.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2",
     "vue": "^2.6.10",
