Replaced babel7-jest by babel-jest

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/room-js/typescript-vue-component-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.4",
+    "@babel/core": "^7.5.5",
     "@storybook/addon-info": "^5.1.9",
     "@storybook/vue": "^5.1.9",
     "@types/jest": "^24.0.15",
@@ -37,11 +37,11 @@
     "@wessberg/rollup-plugin-ts": "^1.1.59",
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.0-beta.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
-    "babel7-jest": "^1.0.1",
     "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "html-loader": "^0.5.5",
