--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "clear:lib": "rm -rf lib",
+    "clear:lib": "rimraf lib",
     "dist": "npm run clear:lib && rollup -c",
     "lint": "eslint --ext .js,.ts ./src",
     "storybook": "start-storybook",
@@ -50,6 +50,7 @@
     "node-sass": "^4.12.0",
     "react-docgen-typescript-loader": "^3.1.0",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.0",
     "rollup": "^1.16.6",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
